--- a/DarkAndLightMode.xcodeproj/xcshareddata/xcschemes/DarkAndLightMode Internal.xcscheme
+++ b/DarkAndLightMode.xcodeproj/xcshareddata/xcschemes/DarkAndLightMode Internal.xcscheme
@@ -39,7 +39,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "31AD304E2A94F94800164A5E"
